--- a/RpsTestProject/RpsTestProject.csproj
+++ b/RpsTestProject/RpsTestProject.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Tests\JogoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\PartidaTest.cs" />
+    <Compile Include="Tests\TorneioTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RpsLib\RpsLib.csproj">
